--- a/css/home_style.css
+++ b/css/home_style.css
@@ -1,19 +1,22 @@
 body{
-    background-color: rgb(230, 236, 240);
     font-family: 'PT Sans', sans-serif;
+    padding: 0;
+    margin: 0;
+    background-color:rgb(230, 236, 240);
 }
 
 header{
     width: 100%;
     z-index: 3;
     position: fixed;
-    background-color:rgb(230, 236, 240);
+    background-color:#fff;
     margin-top: -10px;
     font-family: 'PT Sans', sans-serif;
 }
 
 .nav-bar{
-    background-color:rgb(230, 236, 240);
+    padding-top: 5px;
+    
     width: 100%;
     display: grid;
     grid-template-columns: 6% 6% 6% 6% 35% 20% 10%;
@@ -27,13 +30,12 @@ header{
 
 #tweet-bar,#search{
     width : 450px;
-    padding: 10px;
+    padding: 5px;
     border: none;
     border-radius: 20px;
     border: 1.5px solid rgb(230, 236, 240);
-    background-color:  #fff;
+    background-color:  rgb(230, 236, 240);
 }
-
 main{
     padding-top: 50px;
     z-index: 2;
@@ -55,6 +57,16 @@ main{
     width: 100%;
 }
 
+#live-search{
+    margin-top: -10px;
+    width: 470px;
+    display: none;
+    position: fixed;
+    background-color: #fff;
+    height: auto;
+    justify-content: center;
+    margin-left: 400px;
+}
 
 #title-newsfeed-side{
     background-color: #fff;
@@ -128,16 +140,6 @@ main{
     outline: none;
 }
 
-#live-search{
-    margin-top: -10px;
-    width: 470px;
-    display: none;
-    position: fixed;
-    background-color: #fff;
-    height: auto;
-    justify-content: center;
-    margin-left: 400px;
-}
 
 
 
