--- a/css/personalPage.css
+++ b/css/personalPage.css
@@ -7,7 +7,7 @@ main{
     z-index: 2;
 }
 #nav-under-cover-photo{
-    
+    background-color: #fff;
     height: 60px;
     display: grid;
     align-content: center;
@@ -21,7 +21,7 @@ main{
 }
 #body-personal-page{
     background-color: #e6ecf0;
-    height: 1000px;
+    height: auto;
     display: grid;
     grid-template-columns: 25% 45% 20%;
     grid-column-gap: 1%;
