--- a/css/personalPage.css
+++ b/css/personalPage.css
@@ -1,8 +1,4 @@
-#cover-photo{
-    height: 280px;
-    background-color: #4ab4f5;
 
-}
 main{
     z-index: 2;
 }
@@ -15,6 +11,7 @@ main{
 
 }
 #tweet-follow{
+    
     display : grid;
     grid-template-columns: 12% 12% 12%;
 
@@ -28,4 +25,124 @@ main{
 }
 #left-side-personal-page,#right-side-personal-page,#center-personal-page{    
     margin-top: 10px;
+}
+
+/* 
+* Comment form css
+*/
+#pop-up{
+    display: none;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+}
+#form{
+    margin-top: 65px;
+    background-color: #fff;
+    width: 500px;
+    height: auto;
+    border-radius: 10px;
+    border: 1px solid #e6ecf0;
+}
+#head-form{
+    border-bottom: 1px solid #b2b2b2;
+    height: 50px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-content: center;
+}
+
+#image-gif-bar{
+    margin-top: 18px;
+    margin-bottom: 18px;
+    display: grid;
+    grid-template-columns: 10% 10% 10%;
+    justify-content: left;
+    align-content: center;
+}
+
+
+#form-comment{
+    background-color: #fff;
+    width: 500px;
+    height: auto;
+    border-radius: 10px;
+    border: 1px solid #e6ecf0;
+}
+#head-form-comment{
+    border-bottom: 1px solid #b2b2b2;
+    height: 50px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-content: center;
+}
+#body-form-comment{
+    display: grid;
+    grid-template-columns: 10% 90%;
+    
+}
+#image-gif-bar-comment{
+    margin-top: 18px;
+    margin-bottom: 18px;
+    display: grid;
+    grid-template-columns: 10%;
+    justify-content: left;
+    align-content: center;
+}
+
+#txt-area-reply-to-tweet{
+    padding: 10px;
+    border-radius: 10px;
+    resize:none; 
+    margin-top: 20px ;
+    background-color: #e6ecf0;  
+    border:none; 
+    outline: none;
+    width: 400px;
+    height: 70px; 
+}
+#wrap-txt-reply-to-tweet{
+ 
+    display: grid;
+    padding-bottom: 5px;
+}
+
+/* 
+* style for right-side
+*/
+.right-side{
+    width: 120%;
+    height: 305px;
+    background-color: #fff;
+}
+#right-side-profile{
+    padding : 15px 5px;
+    display: grid;
+    grid-template-columns: 8% 55% 18%;
+    grid-column-gap: 7%;
+    align-content: center;
+    border-bottom: 1px solid #e6ecf0;
+}
+#follow{
+    cursor:pointer;
+    outline:none;
+    border:none; 
+    color:#1da1f2; 
+    font-weight: bold;
+    background-color: #fff;
+}
+.btn_follow{
+    border: 1px solid #1da1f2;
+    border-radius:20px; 
+    width: 60px;
+    padding: 10px 0px 0px 5px;
+}
+#left-side-personal-page{
+    margin-top: 30px;
+    margin-left: 19%;
+}
+#location,#joined-date{
+    display: grid;
+    grid-template-columns: 10% 80%;
+    grid-column-gap: 2%;
 }
