--- a/css/right-side.css
+++ b/css/right-side.css
@@ -12,3 +12,16 @@
     align-content: center;
     border-bottom: 1px solid #e6ecf0;
 }
+#follow{
+    cursor:pointer;
+    outline:none;
+    border:none; 
+    color:#1da1f2; 
+    font-weight: bold;
+    background-color: #fff;
+}
+.btn_follow{
+    border: 1px solid #1da1f2;
+    border-radius:20px; 
+    padding: 8px;
+}
