--- a/css/registration.css
+++ b/css/registration.css
@@ -19,3 +19,10 @@
     left: 0;
     z-index: 1;
 }
+#status{
+    margin: 0;
+    height: 50px;
+    border: 1px solid #ddd;
+    text-align: center;
+    border-radius: 0 0 20px 20px;
+}
